--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   </head>
 
   <body>
-    <h1>Hello webpack!</h1>
+    <main>
+      <h1>TVmaze API: data about TV series and movies.</h1>
+    </main>
   </body>
 </html>
