--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,18 @@
   </head>
 
   <body>
-    <main>
-      <h1>TVmaze API: data about TV series and movies.</h1>
+    <header>
+        <h2>SHOWNET</h2>
+        <nav>
+          <ul class="page-navigation">
+            <li><a href="#" class="nav-link">Home</a></li>
+            <li><a href="#" class="nav-link">Popular</a></li>
+            <li><a href="#" class="nav-link">Genre</a></li>
+          </ul>
+        </nav>
+        <input type="text" placeholder="Search" name="movie search">
+      </header>
+    <main class="content">
     </main>
   </body>
 </html>
