Create and style footer

--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,12 @@
       </header>
     <main class="content">
     </main>
+
+    <footer>
+      <p>&copy; 2022 Shownet, All rights reserved</p>
+      <section class="socials-holder">
+        <h3>Follow us</h3>
+      </section>
+    </footer>
   </body>
 </html>
