--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TV series and movies</title>
+    <script src="https://kit.fontawesome.com/45dab15f92.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -24,7 +25,14 @@
     <footer>
       <p>&copy; 2022 Shownet, All rights reserved</p>
       <section class="socials-holder">
-        <h3>Follow us</h3>
+        <h4>Follow us</h4>
+        <ul class="socials">
+          <li><i class="fa-brands fa-facebook-f"></i></li>
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><i class="fa-brands fa-snapchat"></i></li>
+          <li><i class="fa-brands fa-instagram"></i></li>
+          <li><i class="fa-brands fa-youtube-square"></i></li>
+        </ul>
       </section>
     </footer>
   </body>
