Add icon to search box

--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TV series and movies</title>
-    <script src="https://kit.fontawesome.com/45dab15f92.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/45dab15f92.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <header>
-        <h2>SHOWNET</h2>
-        <nav>
-          <ul class="page-navigation">
-            <li><a href="#" class="nav-link">Home</a></li>
-            <li><a href="#" class="nav-link">Popular</a></li>
-            <li><a href="#" class="nav-link">Genre</a></li>
-          </ul>
-        </nav>
-        <input type="text" placeholder="Search" name="movie search">
-      </header>
-    <main class="content">
-    </main>
+      <h2>SHOWNET</h2>
+      <nav>
+        <ul class="page-navigation">
+          <li><a href="#" class="nav-link">Home</a></li>
+          <li><a href="#" class="nav-link">Popular</a></li>
+          <li><a href="#" class="nav-link">Genre</a></li>
+        </ul>
+      </nav>
+      <div class="icon-input">
+        <input type="text" placeholder="Search" name="movie search" />
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </div>
+    </header>
+    <main class="content"></main>
 
     <footer>
       <p>&copy; 2022 Shownet, All rights reserved</p>
