--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,10 @@
       />
     </header>
     <main class="content">
+      <div class="title">
+        <h1>Discover</h1>
+        <h3>New Movies, Actors, Shows, and Genres</h3>
+      </div>
       <div class="cards"></div>
     </main>
 
