--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         </ul>
       </nav>
       <div class="icon-input">
-        <input type="text" placeholder="Search" name="movie search" />
+        <input type="text" placeholder="Search" name="movie search" class="search" />
         <i class="fa-solid fa-magnifying-glass"></i>
       </div>
     </header>
@@ -33,6 +33,10 @@
       </div>
       <div class="cards"></div>
     </main>
+
+    <section class="popup">
+      
+    </section>
 
     <footer>
       <p>&copy; 2022 Shownet, All rights reserved</p>
