--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <i class="fa-solid fa-magnifying-glass"></i>
       </div>
     </header>
-
+    <div class="cover"></div>
     <main class="content">
       <div class="title">
         <h1>Discover</h1>
@@ -36,6 +36,7 @@
 
     <section class="popup">
     </section>
+     
 
     <footer>
       <p>&copy; 2022 Shownet, All rights reserved</p>
