--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,11 @@
     </header>
     <main class="content">
       <div class="title">
-        <h1>Discover</h1>
-        <h5>New Movies, Actors, Shows, and Genres</h5>
+        <div>
+          <h1>Discover</h1>
+          <h5>New Movies, Actors, Shows, and Genres</h5>
+        </div>
+        <div class="home_cards"></div>
       </div>
       <div class="cards"></div>
     </main>
