Added number of items

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
           <li><a href="#" class="nav-link">Genre</a></li>
         </ul>
       </nav>
+      <li class="number">0</li>
       <input
         type="text"
         class="Search"
@@ -37,7 +38,7 @@
       </div>
       <div class="cards"></div>
     </main>
-    
+
     <div class="cover"></div>
     <section class="popup"></section>
 
