--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      property="og:image"
+      content="./src/shownet-screenshot.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="1024" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://tylher.github.io/Javascript-capstone/"
+    />
+    <meta property="og:title" content="bookstore" />
     <title>TV series and movies</title>
     <script
       src="https://kit.fontawesome.com/45dab15f92.js"
