--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       property="og:image"
-      content="./src/shownet-screenshot.png"
+      content="./imgs/shownet-screenshot.png"
     />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1024" />
