--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       property="og:image"
-      content="./imgs/shownet-screenshot.png"
+      content="https://drive.google.com/file/d/19xwlOgus-f5TY_Fc67QOObkTKWw3nEEF/view?usp=sharing"
     />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1024" />
@@ -15,7 +15,6 @@
       property="og:url"
       content="https://tylher.github.io/Javascript-capstone/"
     />
-    <meta property="og:title" content="bookstore" />
     <title>TV series and movies</title>
     <script
       src="https://kit.fontawesome.com/45dab15f92.js"
