--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       property="og:image"
-      content="./src/shownet-screenshot.png"
+      content="https://i.ibb.co/nLCyq8B/shownet-screenshot.png"
     />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1024" />
@@ -13,9 +13,8 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://tylher.github.io/Javascript-capstone/"
+      content="https://shownet.netlify.app/"
     />
-    <meta property="og:title" content="bookstore" />
     <title>TV series and movies</title>
     <script
       src="https://kit.fontawesome.com/45dab15f92.js"
